# ChangeLog for dev-python/gtksourceview-python
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.33 2010/07/11 15:11:03 pacho Exp $

  11 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  -gtksourceview-python-2.24.1.ebuild, gtksourceview-python-2.26.0.ebuild:
  Drop hppa keywords and old versions per bug 324511

*gtksourceview-python-2.30.2 (14 Jun 2010)

  14 Jun 2010; Pacho Ramos <pacho@gentoo.org>
  +gtksourceview-python-2.30.2.ebuild:
  Add new version for Gnome 2.30.

  11 Jun 2010; Pacho Ramos <pacho@gentoo.org>
  gtksourceview-python-2.28.0.ebuild:
  amd64 stable, bug 320247

  24 May 2010; <nixnut@gentoo.org> gtksourceview-python-2.28.0.ebuild:
  ppc stable #320247

  18 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gtksourceview-python-2.28.0.ebuild:
  x86 stable wrt bug #320247

  17 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  Stable for HPPA (bug #281427).

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  sh stable

  03 Dec 2009; Brent Baude <ranger@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  Marking gtksourceview-python-2.26.0 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  alpha/ia64/sparc stable wrt #281427

  05 Nov 2009; Markus Meier <maekke@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  arm stable, bug #281427

*gtksourceview-python-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gtksourceview-python-2.28.0.ebuild:
  New version for GNOME 2.28.

  24 Oct 2009; nixnut <nixnut@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org>
  gtksourceview-python-2.26.0.ebuild:
  x86 stable, bug #281427

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  gtksourceview-python-2.26.0.ebuild: