@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/gtksourceview-python-2.30.2.ebuild,v 1.1 2010/06/14 14:41:50 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/gtksourceview-python-2.30.2.ebuild,v 1.2 2010/07/20 15:25:51 jer Exp $
 
 GCONF_DEBUG="no"
 G_PY_PN="gnome-python-desktop"
@@ -10,7 +10,7 @@ inherit gnome-python-common
 DESCRIPTION="Python bindings for the gtksourceview (version 1.8) library"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
+KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
 IUSE="doc examples"
 
 RDEPEND="=x11-libs/gtksourceview-1.8*
