@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/gtksourceview-python
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.33 2010/07/11 15:11:03 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.34 2010/07/20 15:25:51 jer Exp $
+
+  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
+  gtksourceview-python-2.26.0.ebuild, gtksourceview-python-2.28.0.ebuild,
+  gtksourceview-python-2.30.2.ebuild:
+  Drop HPPA keywording (bug #324511).
 
   11 Jul 2010; Pacho Ramos <pacho@gentoo.org>
   -gtksourceview-python-2.24.1.ebuild, gtksourceview-python-2.26.0.ebuild:
